<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <!-- 导航栏 -->
    <include 
	    android:id="@+id/top_title" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/shape_blue_btn"
	    layout="@layout/top_all_activity" />

    <!-- 第一部分 begin -->
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/top_title"
        android:id="@+id/startwash_activity_part_1">
        
         <!-- 分割线1 begin -->
         <View
            android:id="@+id/seperator_one"
            android:layout_width="@dimen/width1"
            android:layout_height="@dimen/height20"
            android:layout_marginLeft="@dimen/mLeft25"
            android:background="@color/blue_bg" />
         
	   	<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:orientation="horizontal" 
	            android:layout_below="@id/seperator_one">
	            <ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="@dimen/mTop5"
	                android:layout_marginLeft="@dimen/mLeft18"
	                android:layout_marginTop="@dimen/mTop5"
	                android:contentDescription="@string/Image_Desc"
	                android:src="@drawable/step_enable_logo" />
	
	            <View
	                android:layout_width="@dimen/width18"
	                android:layout_height="@dimen/width1"
	                android:layout_marginLeft="@dimen/mLeft1"
	                android:background="@color/blue_bg" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft1"
	                android:text="@string/start_washCar"
	                android:textColor="@color/color_2"
	                android:textSize="@dimen/tSize16" />
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft10"
	                android:text="(3/4步)"
	                android:textColor="@color/color_19"
	                android:textSize="@dimen/tSize13" />
	       </LinearLayout>
     </RelativeLayout>

   	<!-- 第二部分 -->
   	   <RelativeLayout
	        android:id="@+id/center_content_rl"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_below="@id/startwash_activity_part_1">
            
	   		<!-- 分割线 2 begin -->
	        <View
	            android:layout_width="@dimen/width1"
	            android:layout_height="match_parent"
	            android:id="@+id/seperator_2"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="@dimen/mLeft25"
	            android:background="@color/blue_bg" />
   	       
	   	<LinearLayout
	            android:id="@+id/explain_one"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginLeft="@dimen/mLeft20"
	            android:layout_marginTop="@dimen/mTop10">
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft20"
	                android:textSize="@dimen/tSize18"
	                android:textColor="@color/black"
	                android:singleLine="false"
	                android:text="@string/first" />
	
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft5"
	                android:layout_marginRight="@dimen/mRight10"
	                android:textSize="@dimen/tSize18"
	                android:textColor="@color/black"
	                android:singleLine="false"
	                android:text="@string/first_desc" />
	    </LinearLayout>
	    
	    <LinearLayout
	            android:id="@+id/explain_two"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginLeft="@dimen/mLeft20"
	            android:layout_marginTop="@dimen/mTop10"
	            android:layout_below="@id/explain_one" >
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft20"
	                android:textSize="@dimen/tSize18"
	                android:layout_marginTop="@dimen/mTop15"
	                android:textColor="@color/black"
	                android:singleLine="false"
	                android:text="@string/second" />
	
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/mLeft5"
	                android:layout_marginRight="@dimen/mRight10"
	                android:layout_marginTop="@dimen/mTop15"
	                android:textSize="@dimen/tSize18"
	                android:textColor="@color/black"
	                android:singleLine="false"
	                android:text="@string/second_desc" />
	    </LinearLayout>

		<LinearLayout
		        android:id="@+id/explain_three"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:layout_marginLeft="@dimen/mLeft20"
		        android:layout_marginRight="@dimen/mLeft10"
		        android:layout_marginTop="@dimen/mTop10"
		        android:layout_below="@id/explain_two" >
		            <!-- <TableRow
		                android:id="@+id/tableRow1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" >
		                <TextView
		                    android:id="@+id/textView1"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="@dimen/mLeft20"
		                    android:textSize="@dimen/tSize20"
		                    android:text="@string/pair_status" />
		
		                <TextView
		                    android:id="@+id/pairStatus"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="@dimen/mLeft10"
		                    android:textSize="@dimen/tSize20"
		                    android:textColor="@color/color_17"
		                    android:text="@string/status_desc" />
		            </TableRow> -->
		
		        <!-- <Button
		            android:id="@+id/btnConnect"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="@dimen/mLeft20"
		            android:layout_marginTop="@dimen/mTop20"
		            android:background="@drawable/shape_blue_btn"
		            android:textColor="@color/white"
		            android:textSize="@dimen/tSize20"
		            android:text="@string/start_pair_btn"
		            android:onClick="btnConnectClick" /> -->
		        
		        <Button
		            android:id="@+id/btnWork"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="@dimen/mLeft20"
		            android:layout_marginTop="@dimen/mTop40"
		            android:background="@drawable/shape_blue_btn"
		            android:textColor="@color/white"
		            android:textSize="@dimen/tSize20"
		            android:text="@string/start_work"
		            android:onClick="btnWorkClick" />
		        
		        <Button
		            android:id="@+id/btnPowerOff"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="@dimen/mLeft20"
		            android:layout_marginTop="50dp"
		            android:background="@drawable/shape_gray_btn"
		            android:textColor="@color/white"
		            android:textSize="@dimen/tSize20"
		            android:text="@string/power_off"
		            android:onClick="btnPowerOffClick"
		            />
		    </LinearLayout>
		</RelativeLayout>
</RelativeLayout>
